<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.goline.goline.view.activty.MapaActivity">
    <item
        android:id="@+id/action_mapa_zoom_in"
        android:title="@string/mapa_zoom_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_zoom_out"
        android:title="@string/mapa_zoom_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_localizacao_usuario"
        android:title="@string/mapa_localizacao_usuario"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_localizacao_clube"
        android:title="@string/mapa_localizacao_clube"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_rota_clube"
        android:title="@string/mapa_rota_clube"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_normal"
        android:title="@string/mapa_normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_satelite"
        android:title="@string/mapa_satelite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_terreno"
        android:title="@string/mapa_terreno"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapa_hibrido"
        android:title="@string/mapa_hibrido"
        app:showAsAction="never" />
</menu>
